# Personal-Notebook

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  row.getAttribute('data-block-id'))  tsconfig.app.json  vite.config.ts  启动应用.bat
.cargo/: config.toml
.github/workflows/: pages.yml  tauri-packages.yml
docs/: markdown-import-test.md  todo.md  updates.md
docs/superpowers/plans/: 2026-06-17-whiteboard-integration.md  2026-06-18-mindmap-mode-integration.md  2026-06-20-mindmap-block-mvp.md  2026-06-24-mindmap-special-block-integration.md  2026-06-30-storage-engine-rewrite.md  2026-07-02-page-package-import-export.md  2026-07-02-zhixi-logo-icons.md  2026-07-05-creatable-select-interactions.md  2026-07-05-direction1-page-properties-and-search.md  2026-07-05-page-property-inline-editing.md  2026-07-05-sidebar-sections.md  2026-07-06-insert-handle-stability.md  2026-07-06-page-relationship-network.md  (+26 more)
public/mindmap-web/: host-enhancements.js  host-overrides.css  index.html
public/templates/: high-school-chinese-teacher-workbench.zhiqi
scripts/: build-tauri.mjs  check-version.mjs  generate-teacher-template.mjs  generate-teacher-template.test.ts  mcp-smoke-test.mjs
src/: main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json  tauriConfig.test.ts
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: account.rs  announcements.rs  clipboard_capture.rs  lib.rs  main.rs  updates.rs
src-tauri/src/mcp/: auth.rs  content.rs  mod.rs  semantic.rs
src-tauri/src/storage/: assets.rs  auto_backup.rs  commands.rs  error.rs  mcp.rs  mod.rs  models.rs  schema.rs  search.rs
src/app/: App.codeSplitting.test.ts  App.test.tsx  App.tsx  AuthenticatedApp.test.tsx  AuthenticatedApp.tsx  accountContext.tsx  updateContext.test.tsx  updateContext.tsx  updateContextValue.ts  useDesktopClipboardCapture.test.tsx  useDesktopClipboardCapture.ts
src/domain/: announcementHtml.test.ts  announcementHtml.ts  blockTextStyle.ts  clipboardCapture.test.ts  clipboardCapture.ts  colors.ts  docxImport.test.ts  docxImport.ts  inboxFileImport.ts  markdown.test.ts  markdown.ts  markdownImport.test.ts  markdownImport.ts  pageIcons.ts  pageProperties.test.ts  pageProperties.ts  pageRelations.test.ts  pageRelations.ts  pdfImport.test.ts  pdfImport.ts  richText.test.ts  richText.ts  richTextHtml.test.ts  richTextHtml.ts  search.test.ts  search.ts  seed.test.ts  seed.ts  syncedBlocks.test.ts  syncedBlocks.ts  theme.test.ts  theme.ts  types.ts
src/lib/: accountClient.test.ts  accountClient.ts  announcementClient.test.ts  announcementClient.ts  appSettingsRepository.test.ts  appSettingsRepository.ts  assetFiles.test.ts  assetFiles.ts  assets.test.ts  assets.ts  db.ts  desktopLifecycle.test.ts  desktopLifecycle.ts  externalLinks.test.ts  externalLinks.ts  fileAccess.test.ts  fileAccess.ts  nativeContextMenu.test.ts  nativeContextMenu.ts  sqliteDatabase.ts  storageClient.test.ts  storageClient.ts  updateClient.ts  workspaceRepository.test.ts  workspaceRepository.ts
src/store/: createWorkspaceStore.test.ts  createWorkspaceStore.ts
src/styles/: announcementsLayout.test.ts  appShellLayout.test.ts  canvasEntryCardLayout.test.ts  editorLayering.test.ts  editorMultiSelectLayout.test.ts  editorPlaceholderLayout.test.ts  index.css  mediaBlockLayout.test.ts  optionPickerLayout.test.ts  pageOutlineLayout.test.ts  settingsCenterLayout.test.ts  tableBorders.test.ts  tableControlLayout.test.ts  whiteboardChromeLayout.test.ts
src/test/: memoryRepository.ts  setup.ts  sqliteTestDatabase.ts
src/ui/: copy.test.ts  copy.ts
src/utils/: blockFactory.test.ts  blockFactory.ts  fileName.test.ts  fileName.ts  id.ts  pageTree.test.ts  pageTree.ts  reorder.test.ts  reorder.ts
(+204 files in other folders)
