[package]
name = "zhixi"
version = "0.0.1"
description = "A local-first knowledge base desktop app for Zhixi."
authors = ["知栖"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "zhixi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
hex = "0.4.3"
rusqlite = { version = "0.37.0", features = ["bundled", "serde_json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
tauri = { version = "2.11.3", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_System_DataExchange",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
