[package]
name = "zhiqi"
version = "0.1.1"
description = "A local-first knowledge base desktop app for Zhiqi."
authors = ["知栖"]
edition = "2021"
rust-version = "1.96.1"

[lib]
name = "zhiqi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
axum = "0.8.8"
base64 = "0.22.1"
hex = "0.4.3"
http-body-util = "0.1.3"
keyring = "4.1.5"
pulldown-cmark = { version = "0.13.0", default-features = false }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "system-proxy"] }
rusqlite = { version = "0.37.0", features = ["bundled", "serde_json"] }
rmcp = { version = "2.2.0", features = ["transport-streamable-http-server"] }
rand = "0.10.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
tauri = { version = "2.11.3", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
time = { version = "0.3.47", features = ["formatting", "parsing"] }
tokio = { version = "1.52.0", features = ["macros", "net", "rt-multi-thread", "sync"] }
tokio-util = "0.7.18"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_System_DataExchange",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }
